sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	def compteur:Int=1
	while (compteur!=0) {
	compteur=3
	for (x<-0 to getNombreValeurs()-3) {
		if (plusPetit(x,x+1)) {}
		else {echange(x, x+1)
			compteur=compteur+1
	}
	}
	}


}
